# magnetic_agv_release

./: .gitignore  AGV  AGV.desktop  AGV_DEV  README.md  UPDATE_AGV  UPDATE_AGV.desktop
agv_arduino/: agv_arduino.ino.mega.hex
agv_bringup/: CMakeLists.txt  package.xml
agv_bringup/cfg/: agv_arduino_params.yaml  followline.cfg  followline.yaml
agv_bringup/launch/: agv_magnetic.launch  arduino.launch  load_reconfigure.launch  save_reconfigure.launch  serial.launch
agv_bringup/release/: clear_log  clear_log.py  followline  followline_sensor.py  node_manager  odometry.py  serial_port.py  sound_control.py  ultrasonic
agv_data_model/: CMakeLists.txt  package.xml
agv_data_model/db/: card.db  local_setting.db  remote_setting.db  setting.db
agv_msg/: CMakeLists.txt  package.xml
agv_msg/msg/: ArduinoIO.msg  DiffDriverMotorSpeed.msg  FollowLineControl.msg
agv_msgs/: CMakeLists.txt  package.xml
agv_msgs/msg/: ArduinoIO.msg  ArduinoSensorList.msg  BasicFunction.msg  CardWithFunction.msg  DataChanged.msg  DiffDriverMotorSpeed.msg  FollowLineControl.msg  HmiControl.msg  LedControl.msg  SafetyControl.msg  SafetyStt.msg
agv_msgs/srv/: DataCheck.srv
agv_ui/: CMakeLists.txt  package.xml
agv_ui/release/: card_maker.py  dashboard.py  update_agv
agv_ui/resource/: card_input.ui  card_writer.ui  dashboard.ui  setting_agv.ui  update_agv.ui  window_dashboard.ui
